--- a/android/app/src/main/res/layout/dialog_bill_today.xml
+++ b/android/app/src/main/res/layout/dialog_bill_today.xml
@@ -1,10 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:padding="24dp">
+    android:fillViewport="true">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:padding="24dp">
 
     <!-- Trips List Section -->
     <LinearLayout
@@ -105,4 +110,5 @@
             android:gravity="center" />
     </androidx.cardview.widget.CardView>
 
-</LinearLayout>
+    </LinearLayout>
+</ScrollView>
